Mejora del ClusteringAlternativo (subgrupos 50 a 59). Otros cambios menores